# yuppie-mcp-alibabacloud-fnf

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-30-yuppie-mcp-lark.md
docs/superpowers/specs/: 2026-06-30-yuppie-mcp-lark-design.md
scripts/: publish.sh
src/yuppie_mcp_alibabacloud_fnf/: __init__.py  __main__.py  server.py
src/yuppie_mcp_alibabacloud_fnf/tools/: __init__.py  executions.py  flows.py
src/yuppie_mcp_alibabacloud_fnf/utils/alibabacloud_fnf/: __init__.py  client.py
src/yuppie_mcp_fnf/: __init__.py  __main__.py  server.py
src/yuppie_mcp_fnf/tools/: executions.py  flows.py
src/yuppie_mcp_fnf/utils/: config.py
src/yuppie_mcp_fnf/utils/fnf/: client.py
src/yuppie_mcp_lark/: __init__.py  __main__.py  server.py
src/yuppie_mcp_lark/tools/: bitable.py  messages.py  sheets.py  sheets_quick.py
src/yuppie_mcp_lark/utils/: config.py
src/yuppie_mcp_lark/utils/lark/: __init__.py  base.py  bitable.py  messages.py  sheets.py  sheets_quick.py
tests/: test_config.py  test_lark_client.py  test_parse_definition.py  test_tools.py
